tweak cpu & mem