@@ -1,3 +1,4 @@
 #!/usr/bin/env sh
 
-java --enable-native-access=ALL-UNNAMED -jar proxy.jar
+java -Xms256m -Xmx256m -XX:+UseZGC -XX:+ZGenerational \
+     --enable-native-access=ALL-UNNAMED -jar proxy.jar
